# algoritms

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml
models/: CMakeLists.txt
models/BubbleSort/: BubbleSort.cpp  BubbleSort.h  CMakeLists.txt
models/ExchangeSort/: CMakeLists.txt  ExchangeSort.cpp  ExchangeSort.h
models/ImprovedBubbleSort/: CMakeLists.txt  ImprovedBubbleSort.cpp  ImprovedBubbleSort.h
models/InsertionSort/: CMakeLists.txt  InsertionSort.cpp  InsertionSort.h
models/SelectionSort/: CMakeLists.txt  SelectionSort.cpp  SelectionSort.h
models/Sort/: CMakeLists.txt  Sort.cpp  Sort.h
tests/: BubbleSortTest.cpp  CMakeLists.txt  ExchangeSortTest.cpp  ImprovedBubbleSortTest.cpp  InsertionSortTest.cpp  SelectionSortTest.cpp
